# tcp

./: .gitignore  .gitmodules  Makefile  README.md  confusion.R  lda.jl  stack.yaml  summarize.jl  tcp.cabal  unsample
app/: GetNews.hs  TCP.hs  TCP1.hs  TCP2.hs  TCP3.hs
eval/: README.md  plot.py  score.py  scores.csv
eval/csv/: nb-confusion-001.csv  nb-confusion-002.csv  nb-confusion-003.csv  nb-confusion-004.csv  nb-confusion-005.csv  nb-confusion-006.csv  nb-confusion-007.csv  nb-confusion-008.csv  nb-confusion-009.csv  nb-confusion-010.csv  nb-confusion-011.csv  nb-confusion-012.csv  nb-confusion-013.csv  nb-confusion-014.csv  nb-confusion-015.csv  nb-confusion-016.csv  nb-confusion-017.csv  nb-confusion-018.csv  nb-confusion-019.csv  nb-confusion-020.csv  nb-confusion-021.csv  nb-confusion-022.csv  nb-confusion-023.csv  nb-confusion-024.csv  nb-confusion-025.csv  nb-confusion-026.csv  nb-confusion-027.csv  nb-confusion-028.csv  nb-confusion-029.csv  nb-confusion-030.csv  nb-confusion-031.csv  nb-confusion-032.csv  nb-confusion-033.csv  nb-confusion-034.csv  nb-confusion-035.csv  nb-confusion-036.csv  nb-confusion-037.csv  nb-confusion-038.csv  nb-confusion-039.csv  nb-confusion-040.csv  (+60 more)
src/: NaiveBayes.hs  News.hs  Utils.hs
src/LDA/: Model.hs  lda.hk  lda_simp.hk  lda_simp2.hk
src/LDA2/: Model.hs  lda_simp2.hk
src/NaiveBayes/: Model.hs  naive_bayes_simp.hk
tiny-corpus/all/: 1  2
